--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -151,7 +151,7 @@
 
 	@include mobile-landscape {
 		width: 100%;
-		height: 60%;
+		height: 40%;
 	}
 
 	@include tablet-portrait {
@@ -177,7 +177,7 @@
 
 	@include mobile-landscape {
 		width: 80%;
-		height: 20%;
+		height: 28%;
 		margin: 3% 10%;
 	}
 
@@ -200,7 +200,7 @@
 	}
 
 	@include mobile-landscape {
-	    top: .4em;
+	    top: .3em;
 	}
 
 	@include tablet-portrait {
